Allow scrolling anchors established by empty layers.

HR elements recently got visiblity:hidden added to the UA style sheet, which
means that they establish a layer with zero content size by default. We need
to be able to jump (scroll) to such HR elements if the user clicks on an <a
href="#id">, where #id is the ID of said HR.

Remove an empty rect check that seems unnecessary.

DevTools Console prompt was depending on this check to prevent scrolling when
focused. Now, it will prevent scrolling explicitly.

Bug: 769174
Change-Id: I10d8055da7e878e4a06bc672c593166e6f434c46
Reviewed-on: https://chromium-review.googlesource.com/702685
Commit-Queue: Erik Luo <luoe@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#507561}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: b8ac8ae0a029de8ca616c5a046030c50385a4b54